scrollbar alignment fixed.

--- a/src/home.css
+++ b/src/home.css
@@ -2473,7 +2473,7 @@ a {
         line-height: 40px;
     }
     .MuiSlider-thumb {
-        top: 22px;
+        top: 21px;
     }
 
     .heading2 {
